--- a/template/contact/view.html
+++ b/template/contact/view.html
@@ -8,11 +8,28 @@
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-      <title>{{ title }}</title>
+      <title>Formulário de Contato</title>
     </head>
     <body>
       <div class='text-center'>
-          <h1>{{ content }}</h1>
+          <h1>{{ title }}</h1>
+      </div>
+      <div class='container'>
+        <div class='row'>
+          <div class='col'>
+            <p>
+              {{ content }}
+            </p>
+            <div class='col-sm-6 col-12'>
+              <form method='POST'>{% csrf_token %}
+                <input type='text' class='form-control' placeholder='Nome completo' value='fullname' />
+                <input type='email' class='form-control' placeholder='Digite o seu email' value='email' />
+                <textarea name='content' class='form-control' placeholder='Digite o seu texto aqui'></textarea>
+                <button type='submit' class='btn btn-default'>Enviar</button>
+              </form>
+            </div>
+          </div>
+        </div>  
       </div>
 
       <!-- Optional JavaScript -->
