--- a/template/contact/view.html
+++ b/template/contact/view.html
@@ -22,14 +22,14 @@
             </p>
             <div class='col-sm-6 col-12'>
               <form method='POST'>{% csrf_token %}
-                <input type='text' class='form-control' placeholder='Nome completo' value='fullname' />
-                <input type='email' class='form-control' placeholder='Digite o seu email' value='email' />
-                <textarea name='content' class='form-control' placeholder='Digite o seu texto aqui'></textarea>
+                <input type='text' class='form-control' name='fullname' placeholder='Digite o nome completo!' />
+                <input type='email' class='form-control' name='email' placeholder='Digite o seu email aqui!' />
+                <textarea name='content' class='form-control' placeholder='Digite o seu texto aqui!'></textarea>
                 <button type='submit' class='btn btn-default'>Enviar</button>
               </form>
             </div>
           </div>
-        </div>  
+        </div>
       </div>
 
       <!-- Optional JavaScript -->
