--- a/template/contact/view.html
+++ b/template/contact/view.html
@@ -21,11 +21,10 @@
               {{ content }}
             </p>
             <div class='col-sm-6 col-12'>
-              <form method='POST'>{% csrf_token %}
-                <input type='text' class='form-control' name='fullname' placeholder='Digite o nome completo!' />
-                <input type='email' class='form-control' name='email' placeholder='Digite o seu email aqui!' />
-                <textarea name='content' class='form-control' placeholder='Digite o seu texto aqui!'></textarea>
-                <button type='submit' class='btn btn-default'>Enviar</button>
+              <form method='POST'>
+                 {% csrf_token %}
+                 {{ form }}
+                 <button type='submit' class='btn btn-default'>Enviar</button>
               </form>
             </div>
           </div>
