--- a/template/home_page.html
+++ b/template/home_page.html
@@ -7,12 +7,22 @@
 
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-      <title>{{ title }}</title>
     </head>
     <body>
       <div class='text-center'>
-          <h1>{{ content }}</h1>
+          <h1>{{ title }}</h1>
+          <p>{{ content }}</p>
+      </div>
+      <div class='container'>
+        {% if request.user.is_authenticated %}
+        <div class='row'>
+            <div class='col'>
+              <img src="{% static 'img/eCommerce.jpeg' %}"  />
+              <h1>Premium</h1>
+              <p>{{ premium_content }}</p>
+            </div>
+        </div>
+        {% endif %}
       </div>
 
       <!-- Optional JavaScript -->
