Atualização do list.html em products templates

--- a/products/templates/products/list.html
+++ b/products/templates/products/list.html
@@ -1,4 +1,5 @@
-{{ qs }}
-{{ paginator }}
-{{ is_paginated }}
-{{ object_list }}
+{% for obj in object_list %}
+
+{{ obj.title }} <br />
+
+{% endfor %}
