--- a/synaptrons_ecommerce/template/base.html
+++ b/synaptrons_ecommerce/template/base.html
@@ -8,7 +8,6 @@
         <title>Base Template</title>
     </head>
     <body>
-    {% block content %}
-    {% endblock %}
+    {% block content %} {% endblock %}
     </body>
 </html>
