--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
         {% block base_head %} {% endblock base_head %}
     </head>
     <body>
-        {% include 'base/navbar.html' %}
+        {% include 'base/navbar.html' with nome_da_marca='loja virtual' %}
         {% block content %} {% endblock %}
         {% include 'base/js.html' %}
     </body>
