atualizar 0 list.html

--- a/products/templates/products/list.html
+++ b/products/templates/products/list.html
@@ -2,7 +2,6 @@
 
 {% block content %}
 	{% for obj in object_list %}
-		{% include 'products/snippets/card.html' with instance=obl %}
-		<a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><br/>
+		{% include 'products/snippets/card.html' with instance=obj %}
 	{% endfor%}
 {% endblock %}
