ativar o link nas imagens do card

--- a/products/templates/products/list.html
+++ b/products/templates/products/list.html
@@ -4,9 +4,10 @@
 	<div class='container'>
 		<div class='row'>
 			{% for obj in object_list %}
-			<div class='col'></div>
-				{% include 'products/snippets/card.html' with instance=obj %}
-		</div>
+				<div class='col'>
+					{% include 'products/snippets/card.html' with instance=obj %}
+				</div>
 			{% endfor%}
+		</div>
 	</div>
 {% endblock %}
