--- a/products/templates/products/snippets/card.html
+++ b/products/templates/products/snippets/card.html
@@ -1,9 +1,10 @@
 <div class="card" style="width:18rem;">
   {% if instance.image %}
-    <img src="{{ instance.image.url}}" class="card-img-top" alt="..." />
+    <a href="{{ instance.get_absolute_url }}">
+      <img src="{{ instance.image.url }}" class="card-img-top" alt="{{ instance.title }} logo" />
+    </a>
   {% endif %}
-  <img src="..." class="carg-img-top" alt="..." />
-  <div class="cardbody">
+  <div class="card-body">
     <h5 class="card_title"> {{ instance.title }}</h5>
     <p class="card-text">
       Some quick example text to build n the card title and makeup the bulk of the card's content.</p>
