--- a/products/templates/products/snippets/card.html
+++ b/products/templates/products/snippets/card.html
@@ -9,5 +9,6 @@
     <p class="card-text">
       Some quick example text to build n the card title and makeup the bulk of the card's content.</p>
     <a href="{{ instance.get_absolute_url}}" class="btn btn-primary">Detalhe</a>
+    <a href="{% url 'products:detail' slug=instance.slug %}" class="btn btn-warning">Atalho para a URL</a>
   </div>
 </div>
