--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -5,6 +5,7 @@
     <div class='row'>
         <div class='col'>
             <h1> {{ object.title }} </h1>
+            {{ object.timestamp|timesince }} atrás
             <h3> {{ "Um título qualquer"|title }}</h3>
             {{object.description|linebreaks }}
             {% if object.image %}
