--- a/templates/bootstrap/example.html
+++ b/templates/bootstrap/example.html
@@ -8,19 +8,138 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Exemplos de Bootstrap!</title>
   </head>
   <body>
     <div class='container'>
-      <div class="alert alert-primary" role="alert">
-        A simple primary alert-ckeck it out!
+      <div class="row">
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">
+            A simple primary alert-ckeck it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">
+            A simple secondary alert-check it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">
+            A simple primary alert-ckeck it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">
+            A simple primary alert-ckeck it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">
+            A simple secondary alert-check it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">
+            A simple primary alert-ckeck it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">
+            A simple primary alert-ckeck it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">
+            A simple secondary alert-check it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">
+            A simple primary alert-ckeck it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">
+            A simple primary alert-ckeck it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">
+            A simple secondary alert-check it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">
+            A simple primary alert-ckeck it out!
+          </div>
+        </div>
       </div>
     </div>
     <div class='container-fluid'>
-      <div class="alert alert-secondary" role="alert">
-        A simple secondary alert-check it out!
+      <div class="row">
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">
+            A simple primary alert-ckeck it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">
+            A simple secondary alert-check it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">
+            A simple primary alert-ckeck it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">
+            A simple primary alert-ckeck it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">
+            A simple secondary alert-check it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">
+            A simple primary alert-ckeck it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">
+            A simple primary alert-ckeck it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">
+            A simple secondary alert-check it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">
+            A simple primary alert-ckeck it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">
+            A simple primary alert-ckeck it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">
+            A simple secondary alert-check it out!
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">
+            A simple primary alert-ckeck it out!
+          </div>
+        </div>
       </div>
     </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
