--- a/templates/bootstrap/example.html
+++ b/templates/bootstrap/example.html
@@ -20,19 +20,31 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-2">
-            <div class="alert alert-primary" role="alert" style='min-height: 800px;'>
-              A simple primary alert-check it out!
+        <div class="col-1">
+            <div class="alert alert-primary" role="alert">
+              Home
             </div>
         </div>
-        <div class="col-8">
-          <div class="alert alert-primary" role="alert"  style='min-height: 800px;'>
-            A simple secondary alert-check it out!
+        <div class="col-4 ml-auto">
+            <div class="alert alert-primary" role="alert">
+              <input type="text" class="form-control" placeholder="search">
+            </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 order-1">
+          <div class="alert alert-primary" role="alert" style='min-height: 800px;'>
+            Primeiro Item
           </div>
         </div>
-        <div class="col-2">
+        <div class="col-8 order-6">
+          <div class="alert alert-primary" role="alert"  style='min-height: 800px;'>
+            Segundo Item
+          </div>
+        </div>
+        <div class="col-2 order-12">
           <div class="alert alert-primary" role="alert" style='min-height: 800px;'>
-            A simple secondary alert-check it out!
+            Terceiro Item
           </div>
         </div>
       </div>
