--- a/templates/bootstrap/example.html
+++ b/templates/bootstrap/example.html
@@ -27,11 +27,11 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12 col-lg-2 order-1">
+        <div class="col-11 col-lg-2 order-1">
           <div class="alert alert-primary" role="alert">
             Conteúdo superior
           </div>
-        </div>
+        </div class="col-11 mx-auto col-lg-8 order-6">
         <div class="col-11 ml-auto mr-auto order-6">
           <div class="alert alert-primary" role="alert"  style='min-height: 800px;'>
             Área de conteúdo principal
@@ -49,7 +49,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 order-12">
+        <div class="col-11 mx-auto col-lg-2 order-12">
           <div class="alert alert-primary" role="alert">
             Conteúdo da parte inferior
           </div>
