--- a/templates/bootstrap/example.html
+++ b/templates/bootstrap/example.html
@@ -11,6 +11,45 @@
     <title>Exemplos de Bootstrap!</title>
   </head>
   <body>
+    <!-- Image and text -->
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <div class='container'>
+        <a class="navbar-brand" href="#">
+          <img src="https://getbootstrap.com//docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+          Bootstrap
+        </a>
+        <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbar-collapse-links' aria-expanded='false' aria-label='Toggle Navigation'>
+          <span class='navbar-toggler-icon'></span>
+        </button>
+        <div class='collapse navbar-collapse' id='navbar-collapse-links'>
+          <ul class='navbar-nav'>
+            <li class='nav-item'>
+              <a href='#' class='nav-link'>Principal</a>
+            </li>
+            <li class='nav-item'>
+              <a href='#' class='nav-link'>Sobre</a>
+            </li>
+            <li class='nav-item'>
+              <a href='#' class='nav-link'>Produtos</a>
+            </li>
+            <li class="nar-item dropdown">
+              <a class="btn btn-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown link
+              </a>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+          </ul>
+          <form class="form-inline ml-auto">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
     <div class='container'>
       <div class="row">
         <div class="col-12">
