--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -8,8 +8,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
   <div class='container'>
     <a class="navbar-brand" href="{{ home_url }}">
-      <img src='logo'  />
-      {% if nome_da_marca %} {{nome_da_marca }} {% else %} Synaptrons eCommercer {% endif %}</a>
+      <img src="https://getbootstrap.com/docs/4.5/assets/brand/bootstrap-solid.svg" width="30" Height="30" class="d-inline-block align-top" alt="">
+      {% if nome_da_marca %}
+        {{nome_da_marca }}
+      {% else %}
+        Synaptrons-eCommerce
+      {% endif %}
+    </a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -53,5 +58,5 @@
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
-  </div><1--fim container-->
+  </div><!--fim container-->
 </nav>
